--- a/gui/project.json
+++ b/gui/project.json
@@ -3,7 +3,7 @@
  "description": "Enter your project description",
  "author": {
   "name": "Ryan",
-  "email": "rhpizzaboy@gmail.com"
+  "email": "ryanh12503@gmail.com"
  },
  "version": "0.1.0",
  "binaryname": "tip",
