--- a/gui/frontend/package.json
+++ b/gui/frontend/package.json
@@ -16,6 +16,9 @@
     "copy-webpack-plugin": "^6.0.2",
     "eslint": "^6.8.0",
     "eventsource-polyfill": "^0.9.6",
+    "file-loader": "^6.2.0",
+    "raw-loader": "^4.0.2",
+    "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
