--- a/gui/frontend/package.json
+++ b/gui/frontend/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^6.0.2",
+    "css-loader": "^5.2.4",
     "eslint": "^6.8.0",
     "eventsource-polyfill": "^0.9.6",
     "file-loader": "^6.2.0",
     "raw-loader": "^4.0.2",
+    "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
